# fcu

./: .gitignore  .gitmodules  README.md
doc/: Makefile  UFFStex.cls  bibliography.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
doc/chapters/: chapter_1.aux  chapter_1.tex  chapter_2.aux  chapter_2.tex  chapter_3.aux  chapter_3.tex
pcb/: comps.bak  comps.kicad_sym  fcu.kicad_prl  fcu.kicad_pro  fcu.kicad_sch  fp-info-cache  fp-lib-table  powersupply.kicad_sch  sym-lib-table
pcb/annotations/: overview.md  parts.md
pcb/comps.pretty/: MLF28_5X6_MCH.kicad_mod  SON95P300X300X100-7N.kicad_mod  SOT65P280X145-8N.kicad_mod
src/: CMakeLists.txt  main.cpp  pid.cpp  pid.h  plotlog.py
src/simulation/: CMakeLists.txt  JSBSimInterface.cpp  JSBSimInterface.h  plotlog.py
